--- a/quinzena6/Labefy/package.json
+++ b/quinzena6/Labefy/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "material-ui-audio-player": "^1.7.1",
     "mui-confirm-modal": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
